k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prbot-workflow-service
  namespace: prbot
  labels:
    app: prbot-workflow-service
spec:
  ports:
  - port: 5001
    protocol: TCP
  selector:
    app: prbot-workflow
